<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_view_post_icon_black_24dp"
        android:title="@string/title_post" />
    <item
        android:id="@+id/navigation_info_blog"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_info_blog" />

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_subscriptions" />

    <item
        android:id="@+id/navigation_subscribers"
        android:icon="@drawable/ic_subscribers_black_24dp"
        android:title="@string/title_subscribers" />
    <item
        android:id="@+id/navigation_search_by_tags"
        android:icon="@drawable/ic_find_in_tags_black_24dp"
        android:title="@string/title_search_by_tags" />


</menu>
