<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_activity_constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/registration_btn"
        style="@style/styleRegistrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="112dp"
        android:alpha="1"
        android:background="@drawable/start_registration_btn"
        android:paddingLeft="12dp"
        android:paddingTop="10dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:text="@string/text_registration_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/bottomTextStartActivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorTextHintStartActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/text_no_internet_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="52dp"
        android:text="@string/textErrNoInternet"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorTextHintStartActivity"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/registration_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>